wier/force-app/main/default/objects/PO_Attachments__c/PO_Attachments__c.object-meta.xml
<CustomObject>
    <label>PO Attachments</label>
    <nameField>
        <displayFormat>PO-{0000000000}</displayFormat>
        <label>PO Attachments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>