wier/force-app/main/default/objects/PO_Attachments__c/fields/comments_if_any__c.field-meta.xml
<CustomField>
    <fullName>comments_if_any__c</fullName>
    <label>Comments from Tendering</label>
    <type>TextArea</type>
</CustomField>