wier/force-app/main/default/objects/PO_Attachments__c/fields/Contract_MGR_for_UK__c.field-meta.xml
<CustomField>
    <fullName>Contract_MGR_for_UK__c</fullName>
    <label>Contract MGR for UK</label>
    <type>Email</type>
</CustomField>