wier/force-app/main/default/objects/PO_Attachments__c/fields/Contract_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rep_Email__c</fullName>
    <label>Contract Rep Email</label>
    <type>Email</type>
</CustomField>