wier/force-app/main/default/objects/PO_Attachments__c/fields/Contract_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rep_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(LEFT(  Contract_Reps_email__c , FIND(&apos;@&apos;, Contract_Reps_email__c)),&quot;.&quot;, &quot; &quot;), &quot;@&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Rep Name</label>
    <type>Text</type>
</CustomField>