wier/force-app/main/default/objects/PO_Attachments__c/fields/Contract_Reps_email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reps_email__c</fullName>
    <formula>IF( ISBLANK( Contract_Rep_Email__c ) ,  Assign_Contract_Representative__r.Email , Contract_Rep_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Reps email</label>
    <type>Text</type>
</CustomField>