wier/force-app/main/default/objects/PO_Attachments__c/fields/Customer_document_reference1__c.field-meta.xml
<CustomField>
    <fullName>Customer_document_reference1__c</fullName>
    <formula>VALUE( Customer_document_reference__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer document reference1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>