wier/force-app/main/default/objects/PO_Attachments__c/fields/Customer_document_reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_document_reference__c</fullName>
    <label>Customer document reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>