wier/force-app/main/default/objects/PO_Attachments__c/fields/Info_clarification_reqd_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Info_clarification_reqd_from_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Info/clarifn. reqd from customer by Tendering</description>
    <label>Clarifn. reqd from customer by Tendering</label>
    <type>Checkbox</type>
</CustomField>