wier/force-app/main/default/objects/PO_Attachments__c/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <formula>Opportunity__r.Opportunity_description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Description</label>
    <type>Text</type>
</CustomField>