wier/force-app/main/default/objects/PO_Attachments__c/fields/PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount__c</fullName>
    <label>Total amount as per Customer Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>