wier/force-app/main/default/objects/PO_Attachments__c/fields/Quotation_ID__c.field-meta.xml
<CustomField>
    <fullName>Quotation_ID__c</fullName>
    <formula>Opportunity__r.Quotation_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quotation ID</label>
    <type>Text</type>
</CustomField>