wier/force-app/main/default/objects/PO_Attachments__c/fields/Total_amount_as_per_Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_as_per_Customer_Order__c</fullName>
    <formula>PO_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount as per Customer Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>