wier/force-app/main/default/objects/PO_Attachments__c/validationRules/Handover_to_contracts.validationRule-meta.xml
<ValidationRule>
    <fullName>Handover_to_contracts</fullName>
    <active>false</active>
    <errorConditionFormula>IF(((ISBLANK(Opportunity__r.Customer__r.Move_X_Code1__c)  ||  ISBLANK(Opportunity__r.Customer__r.Payment_terms__c) ||  ISBLANK(Opportunity__r.Customer__r.Credit_limit__c) &amp;&amp;  PO_handed_over_to_contract__c = TRUE)), true, false)</errorConditionFormula>
    <errorDisplayField>PO_handed_over_to_contract__c</errorDisplayField>
    <errorMessage>Movex code,  Payment terms &amp; Credit limit must be updated on Customer page before handover to Contracts.</errorMessage>
</ValidationRule>