wier/force-app/main/default/objects/PO_Attachments__c/validationRules/Info_clarification_and_PO_handed_over.validationRule-meta.xml
<ValidationRule>
    <fullName>Info_clarification_and_PO_handed_over</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Info_clarification_reqd_from_customer__c  ==TRUE,  PO_handed_over_to_contract__c  ==TRUE)</errorConditionFormula>
    <errorDisplayField>Info_clarification_reqd_from_customer__c</errorDisplayField>
    <errorMessage>You can select only one of the options.</errorMessage>
</ValidationRule>