wier/force-app/main/default/objects/PO_Attachments__c/validationRules/Planning_information_on_opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Planning_information_on_opportunity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Opportunity__r.Planning_inform_t_Tendering__c ==FALSE,PO_handed_over_to_contract__c == TRUE,Text(Opportunity__r.Is_the_job_to_be_executed_in_Dubai__c) ==&apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>PO_handed_over_to_contract__c</errorDisplayField>
    <errorMessage>You can&apos;t hand over the PO to Contract unless the Job Delivery Date is advised by Planning.</errorMessage>
</ValidationRule>