wier/force-app/main/default/objects/PO_Attachments__c/validationRules/Po_amount_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Po_amount_validation_rule</fullName>
    <active>true</active>
    <description>Po amount validation rule</description>
    <errorConditionFormula>PO_Amount__c &lt; 1</errorConditionFormula>
    <errorDisplayField>PO_Amount__c</errorDisplayField>
    <errorMessage>Total amount as per Customer Order must be greater than zero.</errorMessage>
</ValidationRule>