wier/force-app/main/default/objects/PO_Attachments__c/validationRules/PO_value_mismatch_with_Quote_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_value_mismatch_with_Quote_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__r.Selling_price_in_Quotation__c  &lt;&gt;  PO_Amount__c</errorConditionFormula>
    <errorDisplayField>PO_Amount__c</errorDisplayField>
    <errorMessage>PO value is not matching with Quote value. Please review or upload the new cost sheet and quotation.</errorMessage>
</ValidationRule>